// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-ckVGcZ fsAzIa"
  >
    <div
      class="sc-fBuWsC kYaBfc"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-ckVGcZ fsAzIa"
  >
    <div
      class="sc-fBuWsC kYaBfc"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-htpNat fsSTsy"
  >
    <table
      class="sc-gPEVay jOwyJh"
    >
      <tbody
        class="sc-iRbamj tSApQ"
      >
        <tr
          class="sc-gipzik eiuiza"
        >
          <td
            class="sc-csuQGl kaqKNb"
          >
            Server version
          </td>
          <td
            class="sc-Rmtcm gwGgYM"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-gipzik eiuiza"
        >
          <td
            class="sc-csuQGl kaqKNb"
          >
            Server address
          </td>
          <td
            class="sc-Rmtcm gwGgYM"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-gipzik eiuiza"
        >
          <td
            class="sc-csuQGl kaqKNb"
          >
            Query
          </td>
          <td
            class="sc-Rmtcm gwGgYM"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-gipzik eiuiza"
        >
          <td
            class="sc-csuQGl kaqKNb"
          >
            Summary
            <div
              class="sc-jlyJG xZgSE fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-Rmtcm gwGgYM"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-gipzik eiuiza"
        >
          <td
            class="sc-csuQGl kaqKNb"
          >
            Response
            <div
              class="sc-jlyJG xZgSE fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-Rmtcm gwGgYM"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
